# python-dev-template

./: pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/: app.py
tests/: test_app.py
