[tool.poetry]
name = "python-dev-template"
version = "0.1.0"
description = ""
authors = ["s-fujimoto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pylint = "^2.17.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.pylint.format]
max-line-length = 120
disable = [
    "C0111",
    "C0112",
    "E0401",
    "F0010",
    "W1203",
    "R0801",
    "R0903",
    "R1705",
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
line_length = 120
